// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user_profile should match snapshot 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="user_profile.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 48,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="user_profile.scroll_view"
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 25,
        }
      }
    >
      <Connect(ProfilePicture)
        iconSize={104}
        size={153}
        statusBorderWidth={6}
        statusSize={36}
        testID="user_profile.profile_picture"
        userId="4hzdnk6mg7gepe7yze6m3domnc"
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "fontSize": 15,
            "marginTop": 15,
          }
        }
        testID="user_profile.username"
      >
        @fred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <View
      style={
        {
          "marginBottom": 25,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        testID="user_profile.display_block"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
          testID="user_profile.display_block.nickname.label"
        >
          Nickname
        </Text>
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 15,
            }
          }
          testID="user_profile.display_block.nickname.value"
        >
          nick
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <userProfileRow
      action={[Function]}
      defaultMessage="Send Message"
      icon="send"
      iconColor="rgba(0, 0, 0, 0.7)"
      iconSize={24}
      testID="user_profile.send_message.action"
      textColor="#000"
      textId="mobile.routes.user_profile.send_message"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      togglable={false}
    />
  </ScrollView>
</ForwardRef>
`;

exports[`user_profile should match snapshot when user is from remote 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="user_profile.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 48,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="user_profile.scroll_view"
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 25,
        }
      }
    >
      <Connect(ProfilePicture)
        iconSize={104}
        size={153}
        statusBorderWidth={6}
        statusSize={36}
        testID="user_profile.profile_picture"
        userId="4hzdnk6mg7gepe7yze6m3domnc"
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "fontSize": 15,
            "marginTop": 15,
          }
        }
        testID="user_profile.username"
      >
        @fred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <View
      style={
        {
          "marginBottom": 25,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        testID="user_profile.display_block"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
          testID="user_profile.display_block.nickname.label"
        >
          Nickname
        </Text>
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 15,
            }
          }
          testID="user_profile.display_block.nickname.value"
        >
          nick
        </Text>
      </View>
      <View>
        <InjectIntl(FormattedText)
          defaultMessage="ORGANIZATION"
          id="mobile.routes.user_profile.organization"
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <ChannelIcon
            hasDraft={false}
            isActive={true}
            isArchived={false}
            isBot={false}
            isInfo={true}
            isUnread={false}
            membersCount={0}
            shared={true}
            size={16}
            theme={
              {
                "awayIndicator": "#ffbc1f",
                "buttonBg": "#1c58d9",
                "buttonColor": "#ffffff",
                "centerChannelBg": "#ffffff",
                "centerChannelColor": "#3f4350",
                "codeTheme": "github",
                "dndIndicator": "#d24b4e",
                "errorTextColor": "#d24b4e",
                "linkColor": "#386fe5",
                "mentionBg": "#ffffff",
                "mentionColor": "#1e325c",
                "mentionHighlightBg": "#ffd470",
                "mentionHighlightLink": "#1b1d22",
                "newMessageSeparator": "#cc8f00",
                "onlineIndicator": "#3db887",
                "sidebarBg": "#1e325c",
                "sidebarHeaderBg": "#192a4d",
                "sidebarHeaderTextColor": "#ffffff",
                "sidebarTeamBarBg": "#14213e",
                "sidebarText": "#ffffff",
                "sidebarTextActiveBorder": "#5d89ea",
                "sidebarTextActiveColor": "#ffffff",
                "sidebarTextHoverBg": "#28427b",
                "sidebarUnreadText": "#ffffff",
                "type": "Denim",
              }
            }
            type="O"
          />
          <Text
            style={
              {
                "color": "#3f4350",
                "fontSize": 15,
              }
            }
          >
            Remote Organization
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <userProfileRow
      action={[Function]}
      defaultMessage="Send Message"
      icon="send"
      iconColor="rgba(0, 0, 0, 0.7)"
      iconSize={24}
      testID="user_profile.send_message.action"
      textColor="#000"
      textId="mobile.routes.user_profile.send_message"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      togglable={false}
    />
  </ScrollView>
</ForwardRef>
`;

exports[`user_profile should match snapshot with custom status 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="user_profile.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 48,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="user_profile.scroll_view"
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 25,
        }
      }
    >
      <Connect(ProfilePicture)
        iconSize={104}
        size={153}
        statusBorderWidth={6}
        statusSize={36}
        testID="user_profile.profile_picture"
        userId="4hzdnk6mg7gepe7yze6m3domnc"
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "fontSize": 15,
            "marginTop": 15,
          }
        }
        testID="user_profile.username"
      >
        @fred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <View
      style={
        {
          "marginBottom": 25,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        testID="user_profile.custom_status"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
        >
          Status
           
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "marginBottom": 3,
                "marginRight": 5,
              }
            }
            testID="custom_status.emoji.calendar"
          >
            <Connect(Emoji)
              emojiName="calendar"
              size={20}
            />
          </Text>
          <View
            style={
              {
                "justifyContent": "center",
                "width": "80%",
              }
            }
          >
            <CustomStatusText
              text="In a meeting"
              textStyle={
                {
                  "color": "#3f4350",
                  "fontSize": 15,
                }
              }
              theme={
                {
                  "awayIndicator": "#ffbc1f",
                  "buttonBg": "#1c58d9",
                  "buttonColor": "#ffffff",
                  "centerChannelBg": "#ffffff",
                  "centerChannelColor": "#3f4350",
                  "codeTheme": "github",
                  "dndIndicator": "#d24b4e",
                  "errorTextColor": "#d24b4e",
                  "linkColor": "#386fe5",
                  "mentionBg": "#ffffff",
                  "mentionColor": "#1e325c",
                  "mentionHighlightBg": "#ffd470",
                  "mentionHighlightLink": "#1b1d22",
                  "newMessageSeparator": "#cc8f00",
                  "onlineIndicator": "#3db887",
                  "sidebarBg": "#1e325c",
                  "sidebarHeaderBg": "#192a4d",
                  "sidebarHeaderTextColor": "#ffffff",
                  "sidebarTeamBarBg": "#14213e",
                  "sidebarText": "#ffffff",
                  "sidebarTextActiveBorder": "#5d89ea",
                  "sidebarTextActiveColor": "#ffffff",
                  "sidebarTextHoverBg": "#28427b",
                  "sidebarUnreadText": "#ffffff",
                  "type": "Denim",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        testID="user_profile.display_block"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
          testID="user_profile.display_block.nickname.label"
        >
          Nickname
        </Text>
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 15,
            }
          }
          testID="user_profile.display_block.nickname.value"
        >
          nick
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <userProfileRow
      action={[Function]}
      defaultMessage="Send Message"
      icon="send"
      iconColor="rgba(0, 0, 0, 0.7)"
      iconSize={24}
      testID="user_profile.send_message.action"
      textColor="#000"
      textId="mobile.routes.user_profile.send_message"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      togglable={false}
    />
  </ScrollView>
</ForwardRef>
`;

exports[`user_profile should match snapshot with custom status and isMyUser true 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="user_profile.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 48,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="user_profile.scroll_view"
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 25,
        }
      }
    >
      <Connect(ProfilePicture)
        iconSize={104}
        size={153}
        statusBorderWidth={6}
        statusSize={36}
        testID="user_profile.profile_picture"
        userId="4hzdnk6mg7gepe7yze6m3domnc"
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "fontSize": 15,
            "marginTop": 15,
          }
        }
        testID="user_profile.username"
      >
        @fred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <View
      style={
        {
          "marginBottom": 25,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        testID="user_profile.custom_status"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
        >
          Status
           
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "marginBottom": 3,
                "marginRight": 5,
              }
            }
            testID="custom_status.emoji.calendar"
          >
            <Connect(Emoji)
              emojiName="calendar"
              size={20}
            />
          </Text>
          <View
            style={
              {
                "justifyContent": "center",
                "width": "80%",
              }
            }
          >
            <CustomStatusText
              text="In a meeting"
              textStyle={
                {
                  "color": "#3f4350",
                  "fontSize": 15,
                }
              }
              theme={
                {
                  "awayIndicator": "#ffbc1f",
                  "buttonBg": "#1c58d9",
                  "buttonColor": "#ffffff",
                  "centerChannelBg": "#ffffff",
                  "centerChannelColor": "#3f4350",
                  "codeTheme": "github",
                  "dndIndicator": "#d24b4e",
                  "errorTextColor": "#d24b4e",
                  "linkColor": "#386fe5",
                  "mentionBg": "#ffffff",
                  "mentionColor": "#1e325c",
                  "mentionHighlightBg": "#ffd470",
                  "mentionHighlightLink": "#1b1d22",
                  "newMessageSeparator": "#cc8f00",
                  "onlineIndicator": "#3db887",
                  "sidebarBg": "#1e325c",
                  "sidebarHeaderBg": "#192a4d",
                  "sidebarHeaderTextColor": "#ffffff",
                  "sidebarTeamBarBg": "#14213e",
                  "sidebarText": "#ffffff",
                  "sidebarTextActiveBorder": "#5d89ea",
                  "sidebarTextActiveColor": "#ffffff",
                  "sidebarTextHoverBg": "#28427b",
                  "sidebarUnreadText": "#ffffff",
                  "type": "Denim",
                }
              }
            />
          </View>
          <View
            style={
              {
                "position": "absolute",
                "right": 0,
                "top": -8,
              }
            }
          >
            <ClearButton
              containerSize={40}
              handlePress={[MockFunction]}
              iconName="close-circle"
              size={20}
              theme={
                {
                  "awayIndicator": "#ffbc1f",
                  "buttonBg": "#1c58d9",
                  "buttonColor": "#ffffff",
                  "centerChannelBg": "#ffffff",
                  "centerChannelColor": "#3f4350",
                  "codeTheme": "github",
                  "dndIndicator": "#d24b4e",
                  "errorTextColor": "#d24b4e",
                  "linkColor": "#386fe5",
                  "mentionBg": "#ffffff",
                  "mentionColor": "#1e325c",
                  "mentionHighlightBg": "#ffd470",
                  "mentionHighlightLink": "#1b1d22",
                  "newMessageSeparator": "#cc8f00",
                  "onlineIndicator": "#3db887",
                  "sidebarBg": "#1e325c",
                  "sidebarHeaderBg": "#192a4d",
                  "sidebarHeaderTextColor": "#ffffff",
                  "sidebarTeamBarBg": "#14213e",
                  "sidebarText": "#ffffff",
                  "sidebarTextActiveBorder": "#5d89ea",
                  "sidebarTextActiveColor": "#ffffff",
                  "sidebarTextHoverBg": "#28427b",
                  "sidebarUnreadText": "#ffffff",
                  "type": "Denim",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        testID="user_profile.display_block"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
          testID="user_profile.display_block.nickname.label"
        >
          Nickname
        </Text>
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 15,
            }
          }
          testID="user_profile.display_block.nickname.value"
        >
          nick
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <userProfileRow
      action={[Function]}
      defaultMessage="Send Message"
      icon="send"
      iconColor="rgba(0, 0, 0, 0.7)"
      iconSize={24}
      testID="user_profile.send_message.action"
      textColor="#000"
      textId="mobile.routes.user_profile.send_message"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      togglable={false}
    />
  </ScrollView>
</ForwardRef>
`;

exports[`user_profile should match snapshot with custom status expiry 1`] = `
<ForwardRef
  style={
    {
      "flex": 1,
    }
  }
  testID="user_profile.screen"
>
  <Connect(StatusBar) />
  <ScrollView
    contentContainerStyle={
      {
        "paddingBottom": 48,
      }
    }
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    testID="user_profile.scroll_view"
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 25,
        }
      }
    >
      <Connect(ProfilePicture)
        iconSize={104}
        size={153}
        statusBorderWidth={6}
        statusSize={36}
        testID="user_profile.profile_picture"
        userId="4hzdnk6mg7gepe7yze6m3domnc"
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "fontSize": 15,
            "marginTop": 15,
          }
        }
        testID="user_profile.username"
      >
        @fred
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <View
      style={
        {
          "marginBottom": 25,
          "marginHorizontal": 15,
        }
      }
    >
      <View
        testID="user_profile.custom_status"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
        >
          Status
           
          <CustomStatusExpiry
            showPrefix={true}
            textStyles={
              {
                "color": undefined,
                "fontSize": 13,
                "fontWeight": "600",
                "textTransform": "uppercase",
              }
            }
            theme={
              {
                "awayIndicator": "#ffbc1f",
                "buttonBg": "#1c58d9",
                "buttonColor": "#ffffff",
                "centerChannelBg": "#ffffff",
                "centerChannelColor": "#3f4350",
                "codeTheme": "github",
                "dndIndicator": "#d24b4e",
                "errorTextColor": "#d24b4e",
                "linkColor": "#386fe5",
                "mentionBg": "#ffffff",
                "mentionColor": "#1e325c",
                "mentionHighlightBg": "#ffd470",
                "mentionHighlightLink": "#1b1d22",
                "newMessageSeparator": "#cc8f00",
                "onlineIndicator": "#3db887",
                "sidebarBg": "#1e325c",
                "sidebarHeaderBg": "#192a4d",
                "sidebarHeaderTextColor": "#ffffff",
                "sidebarTeamBarBg": "#14213e",
                "sidebarText": "#ffffff",
                "sidebarTextActiveBorder": "#5d89ea",
                "sidebarTextActiveColor": "#ffffff",
                "sidebarTextHoverBg": "#28427b",
                "sidebarUnreadText": "#ffffff",
                "type": "Denim",
              }
            }
            time="2200-04-13T18:09:12.451Z"
            withinBrackets={true}
          />
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            style={
              {
                "color": "#3f4350",
                "marginBottom": 3,
                "marginRight": 5,
              }
            }
            testID="custom_status.emoji.calendar"
          >
            <Connect(Emoji)
              emojiName="calendar"
              size={20}
            />
          </Text>
          <View
            style={
              {
                "justifyContent": "center",
                "width": "80%",
              }
            }
          >
            <CustomStatusText
              text="In a meeting"
              textStyle={
                {
                  "color": "#3f4350",
                  "fontSize": 15,
                }
              }
              theme={
                {
                  "awayIndicator": "#ffbc1f",
                  "buttonBg": "#1c58d9",
                  "buttonColor": "#ffffff",
                  "centerChannelBg": "#ffffff",
                  "centerChannelColor": "#3f4350",
                  "codeTheme": "github",
                  "dndIndicator": "#d24b4e",
                  "errorTextColor": "#d24b4e",
                  "linkColor": "#386fe5",
                  "mentionBg": "#ffffff",
                  "mentionColor": "#1e325c",
                  "mentionHighlightBg": "#ffd470",
                  "mentionHighlightLink": "#1b1d22",
                  "newMessageSeparator": "#cc8f00",
                  "onlineIndicator": "#3db887",
                  "sidebarBg": "#1e325c",
                  "sidebarHeaderBg": "#192a4d",
                  "sidebarHeaderTextColor": "#ffffff",
                  "sidebarTeamBarBg": "#14213e",
                  "sidebarText": "#ffffff",
                  "sidebarTextActiveBorder": "#5d89ea",
                  "sidebarTextActiveColor": "#ffffff",
                  "sidebarTextHoverBg": "#28427b",
                  "sidebarUnreadText": "#ffffff",
                  "type": "Denim",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        testID="user_profile.display_block"
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 13,
              "fontWeight": "600",
              "marginBottom": 10,
              "marginTop": 25,
              "textTransform": "uppercase",
            }
          }
          testID="user_profile.display_block.nickname.label"
        >
          Nickname
        </Text>
        <Text
          style={
            {
              "color": "#3f4350",
              "fontSize": 15,
            }
          }
          testID="user_profile.display_block.nickname.value"
        >
          nick
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#EBEBEC",
          "height": 1,
          "marginLeft": 16,
          "marginRight": 22,
        }
      }
    />
    <userProfileRow
      action={[Function]}
      defaultMessage="Send Message"
      icon="send"
      iconColor="rgba(0, 0, 0, 0.7)"
      iconSize={24}
      testID="user_profile.send_message.action"
      textColor="#000"
      textId="mobile.routes.user_profile.send_message"
      theme={
        {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      togglable={false}
    />
  </ScrollView>
</ForwardRef>
`;
